--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "start": "node ./src/main.js"
+    "start": "node ./src/main.js",
+    "prettier:fix": "npx prettier --write ./src/**/*.js"
   },
   "repository": {
     "type": "git",
@@ -19,7 +20,8 @@
   },
   "homepage": "https://github.com/umass-compsci-220/hw6-part-b-f22#readme",
   "devDependencies": {
-    "jest": "^29.2.2"
+    "jest": "^29.2.2",
+    "prettier": "^2.7.1"
   },
   "dependencies": {
     "node-fetch": "^3.2.10"
